Refactor Pages to use AndroidFindBy and clean up constructor dependency